<resources>
    <string name="app_name">Radio Taller</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_radio">Radio Taller FM 105.3 Mhz</string>
    <string name="lourdes">"Nuestra Señora de Lourdes"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_vivo">En Vivo</string>
    <string name="programaci_n">Programación</string>
    <string name="ver_canal_de_youtube">Ver Canal de Youtube</string>
    <string name="ver_sitio_web">Ver Sitio Web</string>
    <string name="enviar_comentarios">Enviar Comentarios</string>
    <string name="configuraci_n">Configuración</string>
    <string name="todo">TODO</string>
    <string name="radio_apagada">Radio Apagada</string>
    <string name="radio_encendida">En el Aire</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="acerca_de">Acerca de</string>
    <string name="canal_estado_nombre">Canal1</string>
    <string name="canal_estado_descr">Canal1</string>
    <string name="buffering">Buffering…</string>

    <string name="btn_perfil_usuario">Perfil de Usuario</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_nacimiento">Fecha de Nacimiento: DD/MM/AAAA</string>
    <string name="label_pais">Pais</string>
    <string name="label_ciudad">Ciudad </string>
    <string name="label_provincia">Provincia </string>
    <string name="label_email">Email </string>
    <string name="btn_guardar">Guardar</string>

    <string name="btn_apariencia">Apariencia</string>
    <string-array name="themes">
        <item>AppTheme</item>
        <item>AppTheme.NoActionBar</item>
        <item>AppTheme.AppBarOverlay</item>
        <item>AppTheme.PopupOverlay</item>
    </string-array>

    <string name="alarm_notification_title">El programa esta comenzando</string>
    <string name="alarm_notification_text">El programa esta comenzando. Enciende la radio para escucharlo.</string>

    <string name="no_hay_usuario_registrado">No hay usuario registrado</string>
    <string name="usted_esta_por_enviar_comentarios_como">Usted esta por enviar comentarios como:</string>
    <string name="configuracion">Configuración</string>
    <string name="pol_ticas_privacidad">Políticas Privacidad</string>


</resources>
