<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/envivo"
            android:icon="@drawable/ic_play_circle_outline"
            android:title="@string/en_vivo" />
        <item
            android:id="@+id/programacion"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/programaci_n" />
        <item
            android:id="@+id/youtube"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ver_canal_de_youtube" />
        <item
            android:id="@+id/web"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/ver_sitio_web" />

            <item
                android:id="@+id/comentarios"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/enviar_comentarios" />
            <item
                android:id="@+id/config"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/configuraci_n" />

    </group>

</menu>
