<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    android:orientation="vertical"
    android:gravity="center">
    tools:context=".EnVivoFragment">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/nombre_radio"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/lourdes"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logoradio_sin_fondo" />


    <TextView
        android:id="@+id/media_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_apagada"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor=" #ffffff "
        android:textSize="18sp"
        tools:layout_editor_absoluteY="181dp" />



    <ToggleButton
        android:id="@+id/play_pause_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/play_pause"
        android:checked="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="185dp" />


</LinearLayout>